--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,7 @@ DB_PORT=5432
 DB_NAME=your_database_name
 DB_USER=your_username
 DB_PASSWORD=your_password
+
+# Google Gemini AI for prescription image analysis (free tier)
+# Get your API key from: https://aistudio.google.com/app/apikey
+GEMINI_API_KEY=your_gemini_api_key_here
