--- a/render.yaml
+++ b/render.yaml
@@ -20,3 +20,5 @@ services:
         value: false
       - key: PYTHON_VERSION
         value: "3.13"
+      - key: GEMINI_API_KEY
+        sync: false
